<resources>
    <string name="app_name">CM</string>
    <string name="image">Image</string>
    <string name="search">Search</string>


    <!--Logout-->
    <string name="logout">Logout</string>
    <string name="leave">Do you wish to leave your session?</string>
    <string name="yes">Leave</string>
    <string name="no">Cancel</string>

    <!--Login Fragment-->
    <string name="invalid_username">Insert a valid username</string>
    <string name="invalid_password">Insert a valid password</string>
    <string name="login_success">Welcome</string>
    <string name="wrong_user_info">Incorrect username or password</string>
    <string name="login_fail">Oops, there was a error trying your login.</string>
    <string name="field_required">Field required.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_remember">Remember me</string>
    <string name="login_btn">Login</string>
    <string name="login_divider">Or</string>
    <string name="login_create">Create account</string>
    <string name="login_recover">Recover password</string>
    <string name="logo">Logo</string>

    <!--Toast-->
    <string name="toast_success">Success</string>
    <string name="toast_info">Information</string>
    <string name="toast_error">Error</string>
    <string name="toast_warning">Warning</string>
    <string name="general_error">Oops, it looks like an error occurred. Check your internet connection and try again</string>
    <string name="Speech_Input_Error">Oops, it looks like you don\'t have support for speech input</string>

    <!--Navigation-->
    <string name="navigation_home">Home</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_logout">Logout</string>
    <string name="navigation_cart">My Basket</string>
    <string name="navigation_products">All Products</string>
    <string name="navigation_favorites">My Favorites</string>
    <string name="navigation_entities">Entities</string>
    <string name="navigation_checkout">Checkout</string>

    <!--HomeFragment-->
    <string name="product_added">Product "'%s'" added.\nQuantity:%s.</string>
    <string name="recommendations">Featured</string>
    <string name="price">%1$s €</string>
    <string name="search_find">Say the article you want to find</string>
    <string name="not_found_product">Article not found</string>
    <string name="products_result">Results for "'%s'"</string>


    <!--CartFragment-->
    <string name="checkout_btn">Checkout</string>
    <string name="cart_subtotal">Subtotal</string>
    <string name="cart_total">Total</string>
    <string name="product_image">Product Image</string>
    <string name="price_default">0,00 €</string>
    <string name="no_products">No products on my basket</string>
    <string name="add_btn">Add to basket</string>
    <string name="product_no_description">No description available</string>

    <!-- Checkout -->
    <string name="checkout_item_count">%s x %s</string>
    <string name="checkout_label">Checkout</string>
    <string name="checkout_payment_label">Payment method</string>
    <string name="checkout_product_incart_label">Products on my basket</string>
    <string name="checkout_data_label">Data</string>
    <string name="payment_button">Pay %1$s€ and continue</string>
    <string name="payment_title">Transaction concluded</string>
    <string name="payment_body">Your purchase was successfully concluded</string>
    <string name="payment_confirm">Continue</string>

    <string name="product_added_checkout">Produto adicionado ao carrinho</string>
    <string name="product_removed">Produto removido do carrinho</string>
    <string name="registry_user_address">Address</string>
    <string name="registry_user_email">Email</string>
    <string name="registry_user_input">Full name</string>
    
    <!-- Product Details -->
    <string name="product_detail_quantity">Quantity</string>
    <string name="product_detail_total">Total</string>
    <string name="product_detail_entity_subcategory">%s / %s</string>

    <!-- Entities -->
    <string name="entities">Entities</string>
    <!-- ProductByEntity -->
    <string name="home_grid_title_entity">Entity Name</string>

    <!--Order End-->
    <string name="order_end_title">Your order is on the way</string>
    <string name="order_end_body">Thank you for your order. You can track the delivery in the \'Orders\' section.</string>
    <string name="order_end_delivery_time">Ext. Delivery time: 30min</string>
    <string name="order_end_track_btn">Track my order</string>
    <string name="order_end_to_home">Take me to the home screen</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="edit_payment_method">Edit payment method</string>

    <!-- Speetch rules-->
    <string-array name="search">
        <item>Search</item>
        <item>Find</item>
    </string-array>
    <string-array name="read_products">
        <item>Read</item>
        <item>Products</item>
    </string-array>
    <string-array name="read_entities">
        <item>Read</item>
        <item>Shops</item>
    </string-array>
    <string-array name="read_cart">
        <item>Read</item>
        <item>Cart</item>
    </string-array>
    <string-array name="go_to_cart">
        <item>Go</item>
        <item>To</item>
        <item>Cart</item>
    </string-array>
    <string-array name="go_to_see_all_products">
        <item>See</item>
        <item>All</item>
        <item>Products</item>
    </string-array>
    <string-array name="go_to_checkout">
        <item>Go</item>
        <item>Pay</item>
    </string-array>
    <string-array name="logout">
        <item>Leave</item>
        <item>App</item>
    </string-array>
    <string-array name="fav">
        <item>Go</item>
        <item>Wishlist</item>
    </string-array>
    <string-array name="go_to_home_page">
        <item>Go</item>
        <item>Home</item>
        <item>Page</item>
    </string-array>
    <string-array name="go_to_order_end">
        <item>Finish</item>
        <item>Order</item>
    </string-array>
    <string-array name="go_to_product_detail">
        <item>Go</item>
        <item>Details</item>
        <item>Product</item>
    </string-array>
    <string-array name="add_product_to_list">
        <item>Add</item>
    </string-array>
    <string-array name="stop_read">
        <item>Stop</item>
        <item>Read</item>
    </string-array>

    <!-- Speech Erros-->
    <string name="speech_item">Item %s, - %s, with value %s€</string>
    <string name="speech_store">Store %s, - %s from %s</string>
    <string name="command_not_found">Unknown action, please try again !</string>
    <string name="fields_error">There are fields to complete !</string>

    <!-- WishList -->
    <string name="toast_settings_btnmic_remove">Voice option removed with success</string>
    <string name="toast_settings_btnmic_add">Voice option added with success</string>
    <string name="mic_button_switch_text">Voice commands</string>
    <string name="fav_removed">Removed from wishlist</string>
    <string name="fav_added">Added to wishlist</string>
    <string name="product_details_size">Size</string>


</resources>