<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:id="@+id/nav_main"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cpb_white"
        android:text="@string/navigation_home"
        android:textSize="@dimen/dimen_16"
        android:focusable="true" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:id="@+id/nav_prod"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cpb_white"
        android:text="@string/navigation_products"
        android:textSize="@dimen/dimen_16"
        android:focusable="true" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:id="@+id/nav_cart"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cpb_white"
        android:text="@string/navigation_cart"
        android:textSize="@dimen/dimen_16"
        android:focusable="true" />

    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:id="@+id/nav_settings"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cpb_white"
        android:text="@string/navigation_settings"
        android:textSize="@dimen/dimen_16"
        android:focusable="true" />


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:id="@+id/nav_logout"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cpb_white"
        android:text="@string/navigation_logout"
        android:textSize="@dimen/dimen_16"
        android:focusable="true" />


</merge>