<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpb_white"
    android:fillViewport="true"
    tools:context="fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:elevation="100dp"
        android:padding="0dp"
        android:paddingTop="0dp">

        <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:elevation="-10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/order" />

                <TextView
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/order_end_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:text="@string/order_end_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:text="@string/order_end_delivery_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/track_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/shape"
                        android:textColor="@color/cpb_white"
                        app:spinning_bar_color="#FFF"
                        android:text="@string/order_end_track_btn"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/take_me_home"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_marginBottom="4dp"
                    android:text="@string/order_end_to_home"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:textSize="16sp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</FrameLayout>
