<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpb_white"
    android:fillViewport="true"
    tools:context="fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:elevation="100dp"
        android:padding="0dp"
        android:paddingTop="0dp">

        <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:elevation="-10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/ic_logo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/login_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/login_password"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_remember"
                    android:layout_marginBottom="8dp">
                </androidx.appcompat.widget.AppCompatCheckBox>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/btn_login"
                        android:text="@string/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        android:textColor="@color/cpb_white"
                        android:background="@drawable/shape" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/login_divider"
                        android:textSize="16sp"
                        android:textColor="#504F4F"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_toStartOf="@id/tvText"
                        android:background="#504F4F"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@id/tvText"
                        android:background="#504F4F"
                        />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_marginBottom="4dp"
                    android:text="@string/login_create"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:textSize="16sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_marginBottom="5dp"
                    android:text="@string/login_recover"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:textSize="16sp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</FrameLayout>
