<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpb_white"
    android:fillViewport="true"
    tools:context="fragments.CartFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        tools:context=".ProductGridFragment">


        <LinearLayout
            style="@style/Widget.Shrine.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="88dp">

            <include layout="@layout/navigation_backdrop" />
        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/close_cart"
                style="@style/Widget.Shrine.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/cpb_white"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/navigation_cart" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="0.4"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:visibility="visible"
                    android:id="@+id/no_products"
                    android:textSize="@dimen/dimen_24"
                    android:background="@color/cpb_white"
                    android:gravity="center"
                    android:text="@string/no_products"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <androidx.core.widget.NestedScrollView
                    android:padding="10dp"
                    android:id="@+id/cart_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cpb_white"
                    android:backgroundTint="@color/cpb_white"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <RelativeLayout
                        app:elevation="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            app:elevation="1dp"
                            android:visibility="visible"
                            android:id="@+id/recycler_view_cart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scrollbars="vertical" />

                    </RelativeLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>


            <LinearLayout
                android:layout_weight="0.6"
                android:background="@color/cpb_white"
                android:backgroundTint="@color/cpb_white"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#777777" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/subtotal_text"
                        android:textSize="17sp"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="20dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingBottom="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart_subtotal" />

                    <TextView
                        android:id="@+id/subtotal_val"

                        android:textStyle="bold"
                        android:gravity="end"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/total_text"
                        android:textSize="17sp"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="20dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingBottom="0dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_default" />


                    <TextView
                        android:layout_below="@id/subtotal_text"
                        android:id="@+id/total_text"
                        android:textSize="25sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:paddingTop="25dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart_total" />

                    <TextView
                        android:layout_below="@id/subtotal_val"
                        android:id="@+id/total_val"
                        android:textColor="@color/cpb_red_dark"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/total_text"
                        android:textSize="25sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingBottom="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_default" />



                    <RelativeLayout
                        android:layout_below="@+id/total_val"
                        android:layout_alignParentBottom="true"
                        android:padding="25dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/checkout_btn"
                            android:text="@string/checkout_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:spinning_bar_width="4dp"
                            app:spinning_bar_color="#FFF"
                            app:spinning_bar_padding="6dp"
                            android:textColor="@color/cpb_white"
                            android:background="@drawable/shape" />

                    </RelativeLayout>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</FrameLayout>
